# simple-game

./: .gitignore  CMakeLists.txt  README.md
include/: engine.h  game.h  input.h  physics.h  renderer.h
src/: engine.c  game.c  input.c  main.c  physics.c  renderer.c
